<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Freedomapp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">Title</string>
    <string name="slogan">A map made by you</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_back">Back</string>
    <string name="menu">Menu</string>
    <string name="search_tags">Search tags</string>
    <string name="search_label">Tags</string>
    <string name="menu_add">Add</string>
    <string name="menu_filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="tag">Tag</string>
    <string name="maps_prompt">Choose type of map</string>
    <string name="url_string">http://129.16.186.166/php_mysql/test.php</string>
    <string name="url_contains">your URL contains</string>
    <string name="info_fetch">Fetch information!</string>
    <string name="login_string">Login</string>
    <string name="username_string">Username</string>
    <string name="password_string">Password</string>
    <string name="not_user_string">Don\'t have an account? Get one now!</string>
    <string name="already_user_string">Already a user? Sign in now!</string>
    <string name="register_string">Register</string>

    <string-array name="maps_array">
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Normal</item>
        <item>Terrain</item>
    </string-array>

  <string name="tutorialdialogview1">Hello! Is this the first time you\'re using Freedomap? Let us walk you through a tutorial on the basic functions in this app.</string>
    <string name="tutorialdialogview2">Freedomap is a map that is created and made interesting by contributions from you and other users. You can pinpoint interesting spots, funny spots, good deals, events, hangouts, good mushroom areas. Basically whatever you want. Your imagination is the limit!</string>
    <string name="tutorialdialogview3">You pinpoint a location by pressing your finger at it for 3 seconds. A dialog is shown where you can enter information such as title, description, photo and hashtags to describe your location. If you want it to be an event, you can set a time interval for it.</string>
    <string name="tutorialdialogview4">If you want to filter shown locations you can search and add hashtags in the top menu. The map will thereafter only show those locations that are connected to these hashtags.</string>
    <string name="tutorialdialogview5">If you want to see more information about a location you can press it and a popup will appear with all available information.</string>
    <string name="tutorialdialogview6">Now you are ready to start using Freedomap! Remember that this app is made great by you and your contribution!</string> <string name="setintitle">You have to set a title to continue</string>
    <string name="yes">Yes</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="ok">OK</string>
    <string name="toolongtitle">Your title may only contain 40 characters!</string>
    <string name="tooshorttitle">Your title have to consist of at least two characters!</string>
    <string name="toolongdescription">Your description may only contain 400 characters!</string>
    <string name="invalidDate">Your end date is previous to your start date!</string>
    <string name="invalidTime">Your end time is previous to your start time!</string>
    <string name="dateTimeWrong">Please finish filling in the start/end times/dates.</string>
    <string name="wrongStartDate">You can not set a starting date before the current day!</string>
    <string name="wrongStartTime">You can not set a starting time before the current time!</string>
    <string name="noDuration">Your event has no duration!</string>
    <string name="noAddedTags">You need to add at least one tag!</string>
    <string name="searched_tags">Searched Tags</string>
    <string name="added_tags">Added tags</string>
    <string name="description">Description</string>
    <string name="set_end_time">Set end time</string>
    <string name="set_end_date">Set end date</string>
    <string name="set_start_time">Set start time</string>
    <string name="set_start_date">Set start date</string>
    <string name="add_photo">Add photo</string>
    <string name="added_photo">Added photo</string>
    <string name="registerfailed">You have failed to register, please try again</string>
    <string name="loginfailed">You have failed to login, please try again</string>
    <string name="youhavetologin">You have to login or register to continue!</string>
    <string name="toofaraway">You are too far away from this event to check in</string>
    <string name="wrongAddedTag">You may not add this tag!</string>
    <string name="imHere">I am here!</string>
    <string name="starts">Starts at:</string>
    <string name="ends">Ends at:</string>
    <string name="retry">Retry!</string>
    <string name="noConnection">No connection to the database!</string>
    <string name="home">Home</string>
    
    
    
</resources>