<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/markerTitle"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F1C40F" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/title"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">
        <Button
            android:id="@+id/buttonCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonCamera"
            android:text="@string/add_photo"
            android:background="#F39C12" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:orientation="horizontal"
        android:paddingTop="10dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/setStartDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="showDatePickerDialog"
                    android:paddingLeft="15dp"
                    android:text="@string/set_start_date"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/setStartTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="showTimePickerDialog"
                    android:paddingLeft="15dp"
                    android:text="@string/set_start_time"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/setEndDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="showDatePickerDialog"
                    android:paddingLeft="15dp"
                    android:text="@string/set_end_date"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/setEndTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="showTimePickerDialog"
                    android:paddingLeft="15dp"
                    android:text="@string/set_end_time"
                    android:textSize="17sp" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:contentDescription="@string/added_photo"
            android:src="@drawable/arrow" />
    </LinearLayout>

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/buttons"
        android:layout_below="@+id/linearlayout2"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/description"
        android:paddingTop="10dp" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F39C12"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/buttonTag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F39C12"
            android:text="@string/tag" />
    </LinearLayout>

</RelativeLayout>