<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
    android:background="#F1C40F">

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/username_string" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_string" />

    <Button
        android:id="@+id/loginOrRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:maxWidth="200dp"
        android:minWidth="200dp"
        android:background="#F39C12"
        android:text="@string/login_string" />

    <TextView
        android:id="@+id/notUserString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginOrRegisterButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
		android:clickable="true"
        android:text="@string/not_user_string" />

</RelativeLayout>
