<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/markerTitle"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F1C40F" >

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtAttenders"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout1"
        android:orientation="vertical"
        android:paddingTop="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/startText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="showDatePickerDialog"
                android:text="@string/starts"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/startDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="showTimePickerDialog"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/endText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="showDatePickerDialog"
                android:text="@string/ends"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/endDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="showTimePickerDialog"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout2"
        android:ems="10"
        android:gravity="top"
        android:paddingTop="10dp"
        android:text="@string/description" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDescription"
        android:orientation="horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/CancelB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:background="#F39C12" />

        <Button
            android:id="@+id/OkB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F39C12"
            android:text="@string/imHere" />
    </LinearLayout>

</RelativeLayout>